<?xml version = "1.0" encoding ="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    tools:context=".LocateFrag"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/ed_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="Search" />
    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:id="@+id/results"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/radioGroup">
        <RadioButton
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:id="@+id/map_view"
            android:layout_weight="0.28"
            android:text="@string/map_view"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:id="@+id/sat_view"
            android:layout_weight="0.28"
            android:text="@string/satellite_view"
            />
        <RadioButton
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:id="@+id/hybrid_view"
            android:layout_weight="0.28"
            android:text="@string/hybrid_view"
            />

    </RadioGroup>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_alignParentBottom="true"
        tools:context="com.example.ongajong.tourismv2.MapIntent.Map" />

</LinearLayout>